# MambaPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mamba/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mamba/player/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/androidTest/java/com/mamba/player/: ExampleInstrumentedTest.kt
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  RealPlayer.cpp  RealPlayer.h  SafeQueue.cpp  SafeQueue.h  Utils.h  VideoChannel.cpp  VideoChannel.h  player.cpp
player/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h  vorbis_parser.h
player/src/main/cpp/ffmpeg/include/libavformat/: avformat.h
player/src/main/cpp/ffmpeg/include/libavutil/: frame.h  mathematics.h  parseutils.h  time.h
player/src/main/java/com/mamba/player/: Player.kt
player/src/test/java/com/mamba/player/: ExampleUnitTest.kt
